--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "consign": "^0.1.6",
+    "cors": "^2.8.4",
     "express": "^4.16.3",
     "express-validator": "^5.2.0",
     "log4js": "1.1.0",
