--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "consign": "^0.1.6",
     "cors": "^2.8.4",
     "express": "^4.16.3",
-    "express-validator": "^5.2.0",
+    "express-joi-validation": "^0.2.1",
+    "joi": "^13.4.0",
     "log4js": "1.1.0",
     "log4js-json": "0.2.0",
     "log4js-json-layout": "^1.0.5"
