eslint minor fix

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,5 +8,8 @@
     "parserOptions": {
         "ecmaVersion": 2016,
         "sourceType": "module"
+    },
+    "rules": {
+        "eol-last": 0
     }
 }
