--- a/.eslintrc
+++ b/.eslintrc
@@ -10,6 +10,7 @@
         "sourceType": "module"
     },
     "rules": {
-        "eol-last": 0
+        "eol-last": 0,
+        "indent": 0
     }
 }
