--- a/package.json
+++ b/package.json
@@ -4,10 +4,15 @@
   "description": "Minimal Express RESTful API boilerplate",
   "main": "index.js",
   "scripts": {
-    "test": "mocha test/**/*.js || true"
+    "test": "nyc mocha test/**/*.spec.js --verbose || true"
   },
   "author": "Pedro Sotero",
   "license": "ISC",
+  "nyc": {
+    "extension": [
+      ".js"
+    ]
+  },
   "dependencies": {
     "body-parser": "^1.18.3",
     "consign": "^0.1.6",
@@ -24,7 +29,9 @@
     "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^13.0.0",
     "eslint-plugin-import": "^2.12.0",
-    "mocha": "^5.2.0",
+    "istanbul": "^0.4.5",
+    "mocha": "^3.4.2",
+    "nyc": "^12.0.2",
     "sinon": "^6.0.1",
     "supertest": "^3.1.0"
   }
