--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Minimal Express RESTful API boilerplate",
   "main": "index.js",
   "scripts": {
-    "start": "babel-node app.js",
-    "test": "nyc mocha test/**/*.spec.js --verbose --compilers js:babel-register || true"
+    "start": "babel-node src",
+    "test": "nyc mocha test/**/*.spec.js --verbose --compilers js:babel-register || true",
+    "build": "babel src -d dist"
   },
   "author": "Pedro Sotero",
   "license": "ISC",
